<resources>
    <string name="app_name">Strongfit</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_registro">Unete a Strongfit</string>
    <string name="text_registrate">Registrate</string>
    <string name="title_activity_profile">Mi perfil</string>
    <string name="articulos_fragment">Articulos</string>
    <string name="chat_fragment">Chat</string>

    <string name="btn_entrar">Entrar</string>
    <string name="btn_listo">Listo</string>

    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="hint_name">Nombre</string>

    <string name="action_profile">Perfil</string>
    <string name="action_cerrar">Cerrar Sesion</string>

    <array name="titles_medico">
        <item>Articulos</item>
        <item>Chat</item>
    </array>
    <array name="titles_paciente">
        <item>Consumo</item>
        <item>Mis datos</item>
    </array>
    <array name="list_titles">
        <item>Inicio</item>
        <item>Alimentos</item>
        <item>Chat</item>
        <item>Dietas</item>
        <item>Articulos</item>
        <item>Salir</item>
    </array>

    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>

    <string name="consumo_fragment">Consumo</string>
    <string name="datos_fragment">Mis datos</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_calorias">90 kcal</string>
    <string name="text_alimento">Alimento</string>
    <string name="text_id">El id</string>
    <string name="title_activity_alimento">AlimentoActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>

</resources>
