<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.strom.strongfit.RegistroActivity"
    android:background="@color/primary_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_registrate"
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="3dp"
        android:id="@+id/input_name"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_name"
        android:textColor="@color/text_color" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/input_email2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:textColor="@color/text_color" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/input_pass2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_pass"
        android:textColor="@color/text_color"
        android:singleLine="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_listo"
        android:id="@+id/btn_listo"
        android:layout_marginTop="10dp"
        android:onClick="onClickRegistrar"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
