<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context="com.strom.strongfit.LoginActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/welcome_image"
        android:scaleType="centerCrop"
        android:src="@drawable/otroback"
        android:contentDescription="@string/image_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_marginTop="42dp"
        android:textSize="35sp"
        android:textColor="@color/text_color"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textColor="@color/text_color"
            android:id="@+id/input_email"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_email"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColor="@color/text_color"
            android:id="@+id/input_password"
            android:hint="@string/hint_pass"
            android:layout_below="@+id/input_email"
            android:layout_alignLeft="@+id/input_email"
            android:layout_alignStart="@+id/input_email"
            android:layout_marginTop="42dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_entrar"
            android:id="@+id/btn_entrar"
            android:layout_below="@+id/input_password"
            android:layout_marginTop="44dp"
            android:layout_alignRight="@+id/input_password"
            android:layout_alignEnd="@+id/input_password"
            android:layout_alignLeft="@+id/input_password"
            android:layout_alignStart="@+id/input_password"
            android:background="@color/accent_color"
            android:textColor="@color/text_color"
            android:onClick="onClickEntrar" />
    </RelativeLayout>
</RelativeLayout>
